--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: '2'
 services:
-  Proxy:
-    image: adi90x/rancher-active-proxy
+  proxy:
+    build: ./
     environment:
       DEFAULT_HOST: "Default Domain ex: bar.com"
       DEFAULT_EMAIL: "Default Email ex: foo@bar.com"
+      UPSTREAM_HOST: localhost
+      UPSTREAM_PORT: 3000
     stdin_open: true
     volumes:
-    - /local/path/data/nginx/htpasswd:/etc/nginx/htpasswd
-    - /local/path/data/nginx/vhost.d:/etc/nginx/vhost.d
-    - /local/path/data/nginx/letsencrypt:/etc/letsencrypt
+    - ./local/nginx/htpasswd:/etc/nginx/htpasswd
+    - ./local/nginx/vhost.d:/etc/nginx/vhost.d
+    - ./local/nginx/letsencrypt:/etc/letsencrypt
     tty: true
     ports:
     - 80:80/tcp
