--- a/templates/Rancher Active Proxy/0/docker-compose.yml
+++ b/templates/Rancher Active Proxy/0/docker-compose.yml
@@ -1,13 +1,15 @@
 version: '2'
 services:
   Rancher-Active-Proxy:
-    image: adi90x/rancher-active-proxy
+    image: webligo/rancher-active-proxy
     environment:
       DEFAULT_HOST: ${DEFAULT_HOST}
       DEFAULT_EMAIL: ${DEFAULT_EMAIL}
       CRON: ${CRON}
       DEBUG: ${DEBUG}
       DEFAULT_PORT: ${DEFAULT_PORT}
+      UPSTREAM_HOST: ${UPSTREAM_HOST}
+      UPSTREAM_PORT: ${UPSTREAM_PORT}
     stdin_open: true
     volumes:
     - ${PATH}/htpasswd:/etc/nginx/htpasswd
