--- a/templates/Rancher Active Proxy/config.yml
+++ b/templates/Rancher Active Proxy/config.yml
@@ -1,7 +1,7 @@
 name: Rancher Active Proxy
 description: "Automatic Active Proxy for Rancher with Let's Encrypt support"
-version: "v0.0.1"
+version: "v0.0.2"
 category: Proxy
-maintainer: AdrienM
+maintainer: RaymondBenc
 license: MIT
-projectURl: "https://github.com/adi90x/rancher-active-proxy"
+projectURl: "https://github.com/SocialEngine/rancher-active-proxy"
